--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "rice_ml"
 version = "0.1.0"
-description = "An example Python project using pyproject.toml"
-authors = [{ name = "Randy R. Davila", email = "randyrdavila@gmail.com" }]
+description = "Classical ML on deepfake medical metadata"
+authors = [{ name = "Melody Dao", email = "melody.dao@rice.edu" }]
 readme = "README.md"
 license = { text = "MIT" }
 requires-python = ">=3.9"
